change article-photo in ibisz.html

--- a/Ibisz.html
+++ b/Ibisz.html
@@ -314,7 +314,7 @@
                   </footer>
                 </section>
                 <figure class="article-photo">
-                  <img src="articles/battery.jpeg" alt="battery image" />
+                  <img src="articles/18-birthday.jpg" alt="battery image" />
                 </figure>
               </article>
             </section>
