--- a/magic.html
+++ b/magic.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wykop clone by MacKry</title>
+    <title>Wykop - klon by MacKry</title>
     <script src="themeLocalStorage.js"></script>
     <link rel="stylesheet" href="main.css" />
-
     <link rel="stylesheet" href="slider.css" />
     <link rel="stylesheet" href="responsive.css" />
 
@@ -265,155 +264,93 @@
         </div>
       </aside>
       <div class="main-content">
-        <aside class="hits-top">
-          <header class="hits-header">
-            <h1>HITY WYKOPU</h1>
-            <p>Zobacz więcej ></p>
-          </header>
-          <section class="hits-container">
-            <article class="hit-article">
-              <a href="kot.html">
-                <img src="articles/kotNaKsiezycu1.jpg" alt="cat photo" />
-                <p class="hit-img-title">Pierwszy kot na księżycu</p>
-                <div class="likes-count">2034</div>
-              </a>
-            </article>
-            <article class="hit-article">
-              <a href="magic.html">
-                <img src="articles/mot.jpg" alt="cat photo" />
-                <p class="hit-img-title">Magic of Turinland na C64</p>
-                <div class="likes-count">1980</div>
-              </a>
-            </article>
-            <article class="hit-article">
-              <a href="lek.html">
-                <img src="articles/kapsulka.jpeg" alt="cat photo" />
-                <p class="hit-img-title">Lek na raka odkryty w Zamościu</p>
-                <div class="likes-count">1205</div>
-              </a>
-            </article>
-          </section>
-        </aside>
         <div class="articles-container">
           <div class="articles-main">
-            <header class="articles-menu">
-              <h1>GŁÓWNA</h1>
-              <p>Najnowsze</p>
-            </header>
             <section class="article-body">
               <aside class="article-left-aside">
-                <p class="like-count">125</p>
+                <p class="like-count">1980</p>
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
                 <section class="article-text">
                   <header>
-                    <a href="bateria.html">
-                      <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
-                    </a>
+                    <h1>Magic of Turinland na C64</h1>
                   </header>
                   <p>
-                    Wynaleziono nowy materiał do magazynowania energii
-                    elektrycznej. Przełomowe baterie będzie można ładować
-                    błyskawicznie!
+                    Gra w końcu pojawiła się w wersji na C-64. Wystarczy
+                    posiadać stacje dysków 1541. Oryginał gry dostępny również w
+                    sklepie
+                    <a
+                      href="https://play.google.com/store/apps/details?id=com.HordaGamesStudio.MagicofTurinlands&hl=en_US&pli=1"
+                      class="play-link"
+                      >Play.</a
+                    >
                   </p>
                   <footer>
-                    <p>songoku z namek.com</p>
-                    <p>opublikowany: 18 godz. i 44 min temu</p>
                     <div class="article-comments-tags">
-                      <p>
-                        <img src="icons/icons8-comment-24(2).png" />
-                      </p>
-                      <p>164</p>
-                      <p style="font-weight: bold">&bull;</p>
                       <p>#nauka</p>
                       <p>#baterie</p>
                       <p>#ciekawostki</p>
                     </div>
-                  </footer>
-                </section>
-                <figure class="article-photo">
-                  <img src="articles/battery.jpeg" alt="battery image" />
-                </figure>
-              </article>
-            </section>
-            <section class="article-body">
-              <aside class="article-left-aside">
-                <p class="like-count">115</p>
-                <button class="like-button">WYKOP</button>
-              </aside>
-              <article class="article">
-                <section class="article-text">
-                  <header>
-                    <a href="polacy.html">
-                      <h1>
-                        Polacy najbardziej uśmiechnietym narodem na świecie.
-                      </h1>
-                    </a>
-                  </header>
-                  <p>
-                    Wg badań "Z brązu" przeprowadzonych w ostatni weekend
-                    noworoczny wynika, że Polska jest liderem wśród pozytywnego
-                    nastawienia do życia obywateli.
-                  </p>
-                  <footer>
-                    <p>gargamel z smerfy.co</p>
-                    <p>opublikowany: 20 godz. i 59 min temu</p>
-                    <div class="article-comments-tags">
+                    <p>matasek z hordagamesstudio.pl</p>
+                    <p>opublikowany: 12 dni temu</p>
+                    <div class="article-answer-section">
                       <p>
                         <img src="icons/icons8-comment-24(2).png" />
                       </p>
-                      <p>125</p>
-                      <p style="font-weight: bold">&bull;</p>
-                      <p>#husaria</p>
-                      <p>#polakstronk</p>
+                      <p>264</p>
+                      <button class="article-answer">
+                        <img
+                          src="icons/reply.png"
+                          alt="reply icon"
+                          class="article-answer-icon"
+                        />
+                        <p id="answer-button">Odpowiedz</p>
+                      </button>
+                      <img
+                        src="icons/share.png"
+                        alt="share icon"
+                        class="article-share-icon"
+                      />
                     </div>
                   </footer>
                 </section>
                 <figure class="article-photo">
-                  <img src="articles/smile.jpeg" alt="smile image" />
+                  <img src="articles/mot.jpg" alt="mot image" />
                 </figure>
               </article>
             </section>
-            <section class="article-body">
-              <aside class="article-left-aside">
-                <p class="like-count">101</p>
-                <button class="like-button">WYKOP</button>
-              </aside>
-              <article class="article">
-                <section class="article-text">
-                  <header>
-                    <a href="bieda.html">
-                      <h1>Koniec biedy w Unii Europejskiej!</h1>
-                    </a>
-                  </header>
-                  <p>
-                    Bruksela ostatecznie rozprawiła się z problemem biedy w
-                    Europie. Od godziny 21:37 obowiązuje nowa ustawa zgodnie, z
-                    którą bycie biednym zostało prawnie zakazane. To największy
-                    do tej pory sukces KE.
-                  </p>
-                  <footer>
-                    <p>saturas z jarkendar.gc</p>
-                    <p>opublikowany: 23 godz. i 12 min temu</p>
-                    <div class="article-comments-tags">
-                      <p>
-                        <img src="icons/icons8-comment-24(2).png" />
-                      </p>
-                      <p>102</p>
-                      <p style="font-weight: bold">&bull;</p>
-                      <p>#bieda</p>
-                      <p>#januszebiznesu</p>
-                    </div>
-                  </footer>
-                </section>
-                <figure class="article-photo">
-                  <img
-                    src="articles/poverty-and-wealth.jpeg"
-                    alt="smile image"
-                  />
-                </figure>
-              </article>
+            <header class="commentary-header">
+              <h2 class="commentary-header-text">KOMENTARZE (22)</h2>
+            </header>
+            <section class="commentary-section" id="commentary-section">
+              <div class="commentary-section-left">
+                <div class="commentary-section-logo">
+                  <img src="icons/avatar.png" />
+                  <div class="user-info-container">
+                    <div class="user-info">Matasek</div>
+                    <time class="user-time">12:00</time>
+                  </div>
+                </div>
+                <p class="commentary-section-text">
+                  Spróbuj dodać swój komentarz klikając u góry "Odpowiedz".
+                  Komentarz pojawi się poniżej mojego wpisu.
+                </p>
+              </div>
+              <div class="commentary-section-right">
+                <div class="article-likes">
+                  <p class="article-likes-count" id="article-likes-count">25</p>
+                  <button class="plus" id="plus-button"></button>
+                  <button class="minus" id="minus-button"></button>
+                </div>
+              </div>
+              <footer class="commentary-section-footer">
+                <div class="commentary-answer">
+                  <img src="icons/reply.png" alt="reply icon" />
+                  <p>Odpowiedz</p>
+                  <img src="icons/share.png" alt="share icon" />
+                </div>
+              </footer>
             </section>
           </div>
           <aside class="slidebar-right">
@@ -507,8 +444,22 @@
         </div>
       </div>
     </main>
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span id="close-button" class="close">&times;</span>
+        <h2>Twoja odpowiedź</h2>
+        <textarea
+          placeholder="Wpisz swoją odpowiedź..."
+          maxlength="200"
+        ></textarea>
+        <button id="submit-button">Wyślij</button>
+      </div>
+    </div>
     <script src="slidebarButton.js"></script>
     <script src="likesCount.js"></script>
+    <script src="plusMinusCount.js"></script>
+    <script src="answer.js"></script>
+    <script src="newComment.js"></script>
     <script src="slidebar-left-position.js"></script>
   </body>
 </html>
