Linked articles in .slidebar-left

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="slidebar-left-nav">
             <ul class="slidebar-left-main-ul">
               <li>
-                <a href="#"
+                <a href="index.html"
                   ><img src="icons/house-svgrepo-com.svg " alt="house icon" />
                   <p class="wykop-p">Wykop.pl</p></a
                 >
@@ -112,19 +112,19 @@
             </ul>
             <ul class="slidebar-left-second-ul">
               <li>
-                <a href="#"
+                <a href="polacy.html"
                   ><img src="icons/bulb-2-svgrepo-com.svg " alt="house icon" />
                   <p>Ciekawostki</p></a
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="likwidacjaVAT.html"
                   ><img src="icons/files-svgrepo-com.svg" alt="house icon" />
                   <p>Informacje</p></a
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="Ibisz.html"
                   ><img
                     src="icons/electronic-controller-gamepad-svgrepo-com.svg "
                     alt="house icon"
@@ -133,7 +133,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="reprezentacja.html"
                   ><img
                     src="icons/shirt-outline-svgrepo-com.svg"
                     alt="house icon"
@@ -142,7 +142,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="bateria.html"
                   ><img
                     src="icons/steering-wheel-svgrepo-com.svg "
                     alt="house icon"
@@ -151,7 +151,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="lek.html"
                   ><img src="icons/chip-svgrepo-com.svg " alt="house icon" />
                   <p>Technologia</p></a
                 >
@@ -163,7 +163,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="bieda.html"
                   ><img
                     src="icons/coins-dollar-money-currency-finance-payment-svgrepo-com.svg "
                     alt="house icon"
@@ -172,7 +172,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="kot.html"
                   ><img
                     src="icons/suitcase-tag-svgrepo-com.svg"
                     alt="house icon"
@@ -196,31 +196,31 @@
         >
           <ul class="slidebar-left-small-main-ul">
             <li class="slidebar-left-small-li">
-              <a href="#"
+              <a href="index.html"
                 ><img src="icons/house-svgrepo-com.svg" alt="house icon" />
               </a>
             </li>
           </ul>
           <ul class="slidebar-left-small-second-ul">
             <li>
-              <a href="#"
+              <a href="polacy.html"
                 ><img src="icons/bulb-2-svgrepo-com.svg " alt="bulb icon"
               /></a>
             </li>
             <li>
-              <a href="#">
-                <img src="icons/files-svgrepo-com.svg" alt="house icon" />
+              <a href="likwidacjaVAT.html">
+                <img src="icons/files-svgrepo-com.svg" alt="info icon" />
               </a>
             </li>
             <li>
-              <a href="#"
+              <a href="magic.html"
                 ><img
                   src="icons/electronic-controller-gamepad-svgrepo-com.svg "
                   alt="gamepad icon"
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="reprezentacja.html">
                 <img
                   src="icons/shirt-outline-svgrepo-com.svg"
                   alt="shirt icon"
@@ -228,7 +228,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="bateria.html">
                 <img
                   src="icons/steering-wheel-svgrepo-com.svg "
                   alt="wheel icon"
@@ -236,7 +236,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="lek.html">
                 <img src="icons/chip-svgrepo-com.svg " alt="chip icon" />
               </a>
             </li>
@@ -246,7 +246,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="bieda.html">
                 <img
                   src="icons/coins-dollar-money-currency-finance-payment-svgrepo-com.svg "
                   alt="coins icon"
@@ -254,7 +254,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="kot.html">
                 <img
                   src="icons/suitcase-tag-svgrepo-com.svg"
                   alt="suitcase icon"
