Rearrange elements in article section for improved layout

--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
+                <header class="article-header">
+                  <a href="bateria.html">
+                    <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
+                  </a>
+                </header>
                 <section class="article-text">
-                  <header>
-                    <a href="bateria.html">
-                      <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
-                    </a>
-                  </header>
                   <p>
                     Wynaleziono nowy materiał do magazynowania energii
                     elektrycznej. Przełomowe baterie będzie można ładować
@@ -343,14 +343,14 @@
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
+                <header class="article-header">
+                  <a href="polacy.html">
+                    <h1>
+                      Polacy najbardziej uśmiechnietym narodem na świecie.
+                    </h1>
+                  </a>
+                </header>
                 <section class="article-text">
-                  <header>
-                    <a href="polacy.html">
-                      <h1>
-                        Polacy najbardziej uśmiechnietym narodem na świecie.
-                      </h1>
-                    </a>
-                  </header>
                   <p>
                     Wg badań "Z brązu" przeprowadzonych w ostatni weekend
                     noworoczny wynika, że Polska jest liderem wśród pozytywnego
@@ -381,12 +381,12 @@
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
+                <header class="article-header">
+                  <a href="bieda.html">
+                    <h1>Koniec biedy w Unii Europejskiej!</h1>
+                  </a>
+                </header>
                 <section class="article-text">
-                  <header>
-                    <a href="bieda.html">
-                      <h1>Koniec biedy w Unii Europejskiej!</h1>
-                    </a>
-                  </header>
                   <p>
                     Bruksela ostatecznie rozprawiła się z problemem biedy w
                     Europie. Od godziny 21:37 obowiązuje nowa ustawa zgodnie, z
